0.0.41 fixes for 1.20.1